@@ -1,3 +1,8 @@
+2025-12-09 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/genplus.c:
+	  Minor genPlus optimizations.
+	  
 2025-12-10 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/bitcount.c.in,
